performance index appropriately styled

--- a/Employees/templates/employee_home.html
+++ b/Employees/templates/employee_home.html
@@ -68,7 +68,7 @@
             </div>
 
             <div class="col s5ths" id="indexes">
-                <h6 class="readonly">Performance Index:</h6>
+                <h6>Performance Index:</h6>
                 {% for form in form %}
                     {{ form.point }}
                 {%endfor%}
