deleted pyc files and added them to the gitignore

--- a/Manager/templates/base.html
+++ b/Manager/templates/base.html
@@ -36,21 +36,10 @@
         <div class="col s12 m12 l4" id="sidenav">
             <nav id="nav">
                 <ul>
-<<<<<<< HEAD
-                    <li id="list_item1"><span><a class="active" href="/manager/homepage"><i class="fas fa-home fa-fw"></i>
-                        Home</a></span></li>
-                    <li id="list_item2"><span><a href="/manager/addemployee"><i class="fas fa-user fa-fw"></i>
-                        Add New Employee</a></span></li>
-                    <li id="list_item3"><a href="/manager/list"><i class="fas fa-edit fa-fw"></i>
-                        Edit Employee Information</a></li>
-                    <li id="list_item4"><a href="/manager/weeklyreports"><i class="fas fa-file-alt fa-fw"></i>
-                        Weekly Reports</a></li>
-=======
                     <li id="list_item1"><span><a href="/manager/homepage">Home</a></span></li>
                     <li id="list_item2"><span><a href="/manager/addemployee">Add New Employee</a></span></li>
                     <li id="list_item3"><a href="/manager/list">Edit Employee Information</a></li>
-                    <li id="list_item4"><a href="">Weekly Reports</a></li>
->>>>>>> master
+                    <li id="list_item4"><a href="/manager/weeklyreports">Weekly Reports</a></li>
                 </ul>
             </nav>
         </div>
