--- a/Employees/templates/base_employee.html
+++ b/Employees/templates/base_employee.html
@@ -37,6 +37,7 @@
                 <ul>
                     <li id="list_item1"><span><a href="/employee/homepage">New Form</a></span></li>
                     <li id="list_item2"><span><a href="">Submitted Forms</a></span></li>
+                    <li id="list_item3"><span><a href="weeklyreports">Weekly Reports</a></span></li>
                 </ul>
             </nav>
         </div>
