--- a/Manager/templates/employee.html
+++ b/Manager/templates/employee.html
@@ -2,6 +2,7 @@
 
 {% block content %}
 <head>
+    <title>{{ title }}</title>
     {% load static %}
     <link rel="stylesheet" type="text/css" href="{% static 'addemployee.css' %}">
     <script>
