--- a/Manager/templates/home.html
+++ b/Manager/templates/home.html
@@ -1,8 +1,8 @@
-
 {% extends 'base.html' %}
 
 {% block content %}
 <head>
+   <title>{{ title }}</title>
    {% load static %}
    <link rel = "stylesheet" type = "text/css" href = "{% static 'home.css' %}">
    <script> 
