--- a/Employees/static/emphome.css
+++ b/Employees/static/emphome.css
@@ -1,7 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Lato);
 
 #nav ul {
-    transform: translateY(30vh);
+    transform: translateY(20vh);
 }
 
 #top-section, #second-section, #third-section, #bottom-section {
@@ -98,6 +98,7 @@ select:focus {
 
 #bottom-section .date {
     border-bottom: 1px solid #9e9e9e;
+    font-size: 14px;
 }
 
 #add-button:hover {
