--- a/Manager/static/home.css
+++ b/Manager/static/home.css
@@ -30,6 +30,7 @@ input[type="submit"] {
     border: 1px solid #000000;
     width: 250px;
     height: 35px;
+    transition: background-color 450ms ease;
 }
 
 input[type="submit"]:hover {
