working on the backend form submission

--- a/Employees/templates/employee_home.html
+++ b/Employees/templates/employee_home.html
@@ -11,7 +11,7 @@
 
 <!-- main content-->
 <h4>New Form</h4><br>
-<form action="" method="POST" id="form" onsubmit="return validate()">
+<form action="" method="POST" id="form" >
     {% include 'alert.html' %}
 
     {% csrf_token %}
