working on editing forms, javascript not working properly, submission left, check to not add multiple tips for one employee

--- a/Employees/templates/employee_home.html
+++ b/Employees/templates/employee_home.html
@@ -125,7 +125,7 @@
 
                 <div class="col s2 m2 l2">
                     <label class="readonly" id="tiLabel">Total Index:</label>
-                    <input readonly type="number" id="total_index" onfocus="calculateTotalIndex(this)">
+                    <input readonly type="number" id="total_index" onfocus="calculateTotalIndex()">
                 </div>
 
                 <div class="col s2 m2 l2">
