--- a/Manager/static/edit_form.css
+++ b/Manager/static/edit_form.css
@@ -72,7 +72,7 @@ select:focus {
     outline: none;
 }
 
-#add-button, #calculate-tips, #form-submit {
+#add-button, #calculate-tips, #form-submit, #delete_button, #cancel_button {
     margin: 0px 10px 5px 10px;
     width: 250px;
     height: 35px;
@@ -111,10 +111,15 @@ select:focus {
     transition: background-color 450ms ease;
 }
 
-#form-submit {
+ #cancel_button {
     background-color: rgba(0,0,0,0.2);
 }
-
+#delete_button{
+    background-color: rgba(255, 0, 0, 0.417);
+}
+#form-submit{
+    background-color: rgba(0, 128, 0, 0.281);
+}
 /* MEDIA QUERIES */
 @media only screen and (min-width: 0) {
     h6 {
