--- a/Manager/templates/edit_employee.html
+++ b/Manager/templates/edit_employee.html
@@ -10,8 +10,8 @@
     </script>
 </head>
 <!-- main content-->
-<h4>Add Employee</h4>
-<form method="POST" class="post-form" id = "form">
+<h4>Edit Employee</h4>
+<form method="POST" class="post-form" id = "form" onsubmit="return checkDelete()">
     {% include 'alert.html' %}
     {% csrf_token %}
     <div class="wrapper">
@@ -23,9 +23,11 @@
         <div class="form-buttons center-align">
             <button type="submit" name="save_button" class="save">Save</button>
             <button type="submit" name="cancel_button" class="cancel" formnovalidate>Cancel</button><br>
+            <button type="submit" name="delete_button" class="delete" onclick="onDelete()">Delete</button>
+      
         </div>
     </div>
 </form>
-
+<script src = "{% static 'edit_employee.js' %}"></script>
 <!-- end main content-->
 {% endblock %}
