--- a/Manager/templates/edit_form.html
+++ b/Manager/templates/edit_form.html
@@ -11,7 +11,7 @@
 </head>
 
 <!-- main content-->
-<h4>New Form</h4><br>
+<h4>Edit Form</h4><br>
 <form action="" method="POST" id="form" onsubmit="return validate()">
     {% include 'alert.html' %}
 
@@ -141,7 +141,9 @@
 
         <div class="row">
             <div class="col s12 m12 l12 center-align">
-                <input type="submit" value="Submit Form" id="form-submit">
+                <input type="submit" value="Submit Changes" id="form-submit">
+                <input type="submit" value="Cancel" id = "cancel_button" name = "cancel_button" formnovalidate>
+                <input type="submit" value="Delete" id = "delete_button" name = "delete_button">
             </div>
         </div>
     </div>
