--- a/Manager/templates/home.html
+++ b/Manager/templates/home.html
@@ -11,6 +11,7 @@
 </head>
 
 <!-- main content-->
+{% include 'alert.html' %}
 <h4>Recent Forms</h4>
 <div id="period_selector">
    <form method="POST">
